# zen-reply

./: .env.example  .gitignore  CHANGELOG.md  PROJECT_HANDOFF.md  PROJECT_SPEC.md  README.md  README_DEMO.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
devlog/: 0228_01.md  0228_03.md  0228_04.md  0228_08.md  MANIFEST.md  WINDOW_LAYERS.md
devlog/archive/: 0227.md  0228_02.md  0228_03.md  0228_05.md  0228_06.md  0228_09.md  README_DEMO.md
docs/: PROJECT_HANDOFF.md  PROJECT_SPEC.md
docs/devlog/archive/: 0228_04.md  0228_07.md  0228_08.md  0228_10.md  0301_01.md  0302_01.md
src/: App.css  App.tsx  AppShortcuts.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/feedback/: ErrorToast.tsx  ToastBar.tsx  ZenToast.tsx
src/components/layout/: FlipCard.tsx
src/components/settings/: SettingsDrawer.tsx  SettingsPanel.tsx
src/components/shared/: ClearableField.tsx  GlassCard.tsx
src/components/zenreply/: ResultCard.tsx  RoleComposer.tsx  SourceTextCard.tsx  StyleComposer.tsx  WorkArea.tsx
src/contexts/: AppProvider.tsx  SettingsContext.tsx  ToastContext.tsx  ZenReplyContext.tsx
src/features/settings/: store.ts
src/features/zenreply/: mockReplies.ts  prompt.ts  types.ts
src/hooks/: useAutoResizeWindow.ts  useDragWindow.ts  useGlobalShortcuts.ts  useLlmStream.ts  useMockStream.ts  useSettings.ts  useToast.ts  useTransientError.ts  useZenReplyFlow.ts
src/shared/: constants.ts  motion.ts  tokens.ts  utils.ts
