[package]
name = "ZenReply"
version = "0.1.0"
description = "ZenReply — AI-powered communication assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = "s"          # optimise for size
lto = true                # full link-time optimisation
codegen-units = 1         # max optimisation (slower build)
strip = true              # strip debug symbols
panic = "abort"           # smaller binary, no unwind tables

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
enigo = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
